# CyberGuard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
docs/: architecture.md
securescope/: .env.example  Dockerfile  Makefile  pyproject.toml
securescope/.github/workflows/: ci.yml
securescope/src/securescope/cli/: main.py
securescope/tests/: test_import.py
src/cyberguard/: __init__.py  cli.py  models.py  scanner.py
src/cyberguard/engines/: __init__.py  ai_engine.py  bandit_engine.py  base.py  crypto_engine.py  dependency_engine.py  network_engine.py  pattern_engine.py
src/cyberguard/reporters/: __init__.py  base.py  json_reporter.py  sarif_reporter.py
src/cyberguard/services/: cache.py  cisa_kev_client.py  mitre_attack_client.py  nvd_client.py  osv_client.py
tests/: conftest.py  test_cli.py  test_engines.py  test_models.py  test_reporters.py  test_scanner.py  test_securescope_cli.py
tests/fixtures/: requirements.txt  vulnerable.go  vulnerable.java  vulnerable.js  vulnerable.py
