[tool.poetry]
name = "securescope"
version = "0.1.0"
description = "AI-powered cybersecurity code scanner CLI tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "securescope", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.7.0"
pydantic = "^2.6.1"
httpx = "^0.26.0"
bandit = "^1.7.7"
semgrep = "^1.61.0"
tree-sitter = "^0.20.4"
typer = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
black = "^24.1.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
securescope = "securescope.cli.main:app"
